--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -9,7 +9,7 @@ gauge_reports_dir = reports
 #Set as false if gauge reports should not be overwritten on each execution. A new time-stamped directory will be created on each execution.
 overwrite_reports = true
 
-# Set to false to disable screenshots on failure in reports.
+# Set false to disable screenshots on failure in reports.
 screenshot_on_failure = true
 
 # The path to the gauge logs directory. Should be either relative to the project directory or an absolute path.
